--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ body a:hover{
 }
 
 .home {
-    background: url(/Users/ugne/Documents/Sandra/IMG_20200207_174809.jpg) no-repeat center center fixed; 
+    background: url() no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
